dirty patch for tiny overflow bug on front

--- a/css/front.css
+++ b/css/front.css
@@ -7198,15 +7198,18 @@ body.front.seller-profile [canvas="container"] {
 body.front.seller-profile div.main.container {
   margin-top: 30px;
   margin-bottom: 30px; }
-  body.front.seller-profile div.main.container #main-content div.name {
-    color: #4c4c4c;
-    font-size: 2em;
-    font-weight: 500; }
-    body.front.seller-profile div.main.container #main-content div.name small {
-      color: #b2b2b2;
-      font-weight: 100; }
-    body.front.seller-profile div.main.container #main-content div.name span {
-      border-bottom: 3px solid #00c079; }
+  body.front.seller-profile div.main.container #main-content {
+    max-width: calc(100% - 0.75rem);
+    margin: 0 auto; }
+    body.front.seller-profile div.main.container #main-content div.name {
+      color: #4c4c4c;
+      font-size: 2em;
+      font-weight: 500; }
+      body.front.seller-profile div.main.container #main-content div.name small {
+        color: #b2b2b2;
+        font-weight: 100; }
+      body.front.seller-profile div.main.container #main-content div.name span {
+        border-bottom: 3px solid #00c079; }
   body.front.seller-profile div.main.container #sidebar-content div.box.details {
     padding: 0 0.5em;
     background: #fff; }
@@ -7295,30 +7298,33 @@ body.front.item [canvas="container"] {
 body.front.item div.main.container {
   margin-top: 30px;
   margin-bottom: 30px; }
-  body.front.item div.main.container #main-content div.set {
-    margin-top: 2em; }
-    body.front.item div.main.container #main-content div.set .user-block + .user-block {
-      padding-top: 1rem;
-      border-top: 1px solid #f5f5f5; }
-    body.front.item div.main.container #main-content div.set div.callout {
-      position: relative; }
-      body.front.item div.main.container #main-content div.set div.callout:not(:last-child) {
-        margin-bottom: 1.5rem; }
-        body.front.item div.main.container #main-content div.set div.callout:not(:last-child):after {
-          content: '';
-          position: absolute;
-          width: 100%;
-          bottom: -0.75rem;
-          border-bottom: 1px solid #f5f5f5; }
-      body.front.item div.main.container #main-content div.set div.callout h6 {
-        margin-bottom: 0.5em;
-        font-weight: 500;
-        text-transform: uppercase;
-        color: #636c72; }
-      body.front.item div.main.container #main-content div.set div.callout p {
-        color: #b2b2b2; }
-        body.front.item div.main.container #main-content div.set div.callout p:not(:last-child) {
-          margin-bottom: 0.5em; }
+  body.front.item div.main.container #main-content {
+    max-width: calc(100% - 0.75rem);
+    margin: 0 auto; }
+    body.front.item div.main.container #main-content div.set {
+      margin-top: 2em; }
+      body.front.item div.main.container #main-content div.set .user-block + .user-block {
+        padding-top: 1rem;
+        border-top: 1px solid #f5f5f5; }
+      body.front.item div.main.container #main-content div.set div.callout {
+        position: relative; }
+        body.front.item div.main.container #main-content div.set div.callout:not(:last-child) {
+          margin-bottom: 1.5rem; }
+          body.front.item div.main.container #main-content div.set div.callout:not(:last-child):after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            bottom: -0.75rem;
+            border-bottom: 1px solid #f5f5f5; }
+        body.front.item div.main.container #main-content div.set div.callout h6 {
+          margin-bottom: 0.5em;
+          font-weight: 500;
+          text-transform: uppercase;
+          color: #636c72; }
+        body.front.item div.main.container #main-content div.set div.callout p {
+          color: #b2b2b2; }
+          body.front.item div.main.container #main-content div.set div.callout p:not(:last-child) {
+            margin-bottom: 0.5em; }
   body.front.item div.main.container #basket-form-container {
     background-color: #fff;
     -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
