--- a/sass/views/front/_seller-profile.scss
+++ b/sass/views/front/_seller-profile.scss
@@ -8,6 +8,10 @@ body.front.seller-profile {
         margin-bottom: 30px;
 
         #main-content {
+            // don't understand why this is necessary, but it prevents horizontal overflow on phones
+            max-width: calc(100% - 0.75rem);
+            margin: 0 auto;
+            
             div.name {
                 color: $dark-gray;
                 font-size: 2em;
